--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^11.1.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
