--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "animate.css": "^4.1.1",
     "firebase": "^9.1.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
